eval/a2_2023_05_03_00_08_11_grade_00.00/compile.log
a2.c: In function 'main':
a2.c:76:9: error: a label can only be part of a statement and a declaration is not a statement
   76 |         int pid1, pid2;
      |         ^~~
a2.c:87:13: error: a label can only be part of a statement and a declaration is not a statement
   87 |             int pid3, pid4, pid5, pid6;
      |             ^~~
a2.c:133:17: error: a label can only be part of a statement and a declaration is not a statement
  133 |                 int status;
      |                 ^~~
a2.c:149:21: error: a label can only be part of a statement and a declaration is not a statement
  149 |                     int status;
      |                     ^~~
a2.c:166:25: error: a label can only be part of a statement and a declaration is not a statement
  166 |                         int status;
      |                         ^~~
a2.c:202:29: error: a label can only be part of a statement and a declaration is not a statement
  202 |                             int status;
      |                             ^~~
a2.c:218:13: error: a label can only be part of a statement and a declaration is not a statement
  218 |             int status;
      |             ^~~
a2.c:236:17: error: a label can only be part of a statement and a declaration is not a statement
  236 |                 int status;
      |                 ^~~
a2.c:247:9: error: a label can only be part of a statement and a declaration is not a statement
  247 |         int status;
      |         ^~~
